@@ -112,6 +112,9 @@
       \item The \code{confint()} function failed on results of 
       \code{nls()} fits that specified parameter limits despite using 
       an algorithm other than \code{"port"}.  (\PR{15960})
+
+      \item Subclassing an S4 class failed if the class required
+      arguments to the generator, through its \code{initialize()} method.
     }
   }
 }
